welcome.lessons.welcome.array.island.Island.scala.code
def island(num:Array[Int]): Int = {
	var res:Float = 0
  for(i <- 0 to num.length-2)
  {
    if(num(i)!=num(i+1))
    {
      res = res +1
    }
  }
  res = res/2
  res = Int(res)
  return res
}
